deploy/manifests.yaml
---
# Source: m13k/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: m13k
  labels:
    helm.sh/chart: m13k-0.1.0
    app.kubernetes.io/name: m13k
    app.kubernetes.io/instance: m13k
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: m13k
    app.kubernetes.io/instance: m13k
---
# Source: m13k/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: m13k
  labels:
    helm.sh/chart: m13k-0.1.0
    app.kubernetes.io/name: m13k
    app.kubernetes.io/instance: m13k
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: m13k
      app.kubernetes.io/instance: m13k
  template:
    metadata:
      labels:
        app.kubernetes.io/name: m13k
        app.kubernetes.io/instance: m13k
    spec:
      serviceAccountName: m13k
      securityContext:
        {}
      volumes:
        - name: tls
          secret:
            secretName: m13k-tls
        - name: mutate
          configMap:
            name: m13k-mutate
      containers:
        - name: m13k
          securityContext:
            {}
          image: "paulczar/m13k:latest"
          imagePullPolicy: Always
          volumeMounts:
            - name: tls
              mountPath: /app/tls
            - name: mutate
              mountPath: /app/mutate
          command: ["/app/m13k"]
          args:
            - "serve"
            - "--cert"
            - "/app/tls/server.crt"
            - "--key"
            - "/app/tls/server.key"
            - "--command"
            - "ytt"
            - "--"
            - "--allow-symlink-destination"
            - "true"
            - "--dangerous-allow-all-symlink-destinations"
            - "-o"
            - "json"
            - "-f"
            - "-"
            - "-f"
            - "/app/mutate"
          ports:
            - name: http
              containerPort: 8443
              protocol: TCP
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: http
          resources:
            {}
---
# Source: m13k/templates/admission-registration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: m13k
  labels:
    helm.sh/chart: m13k-0.1.0
    app.kubernetes.io/name: m13k
    app.kubernetes.io/instance: m13k
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: m13k.m13k.svc
    clientConfig:
      service:
        name: m13k
        namespace: m13k
        path: "/mutate"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURORENDQWh5Z0F3SUJBZ0lVVFcxTGVsTHRKZlgrUC9jTlQ2QUpPNXNIckt3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0VqRVFNQTRHQTFVRUF3d0hkR1Z6ZEMxallUQWVGdzB5TURBMk1qVXlNREF3TURSYUZ3MHlNREE0TWpReQpNREF3TURSYU1CSXhFREFPQmdOVkJBTU1CM1JsYzNRdFkyRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCCkR3QXdnZ0VLQW9JQkFRQzl6WEp5UFhDMVF4TG5iWXFUeXA2L3E4NkgrcjFRTG1zeERuZkFuSjVieUlyUkQ5YUkKdDFhL2YvSEpQa3RQek1sKzBXZU4renNDVEtUTHRGelpZQmZZWlBXbTBYM0dETFAyRlhJNW5BR0pBcXppRTBocQpTUmZSYnlJUW5E [...]
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["secrets"]
---
# Source: m13k/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "m13k-test-connection"
  labels:
    helm.sh/chart: m13k-0.1.0
    app.kubernetes.io/name: m13k
    app.kubernetes.io/instance: m13k
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['m13k:443']
  restartPolicy: Never
